# ai-profiling-v2

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
apps/: AGENTS.md
apps/web/: index.html  package.json
apps/web/src/: App.tsx
apps/web/src/components/: AutocompleteInput.tsx  DerivedOrgPathDisplay.tsx  FieldInput.tsx  HelpPanel.tsx  InvitationStartScreen.tsx  ProgressNav.tsx  QuestionRenderer.tsx  ReviewScreen.tsx
apps/web/src/data/: questionnaire.ts
apps/web/src/lib/: directoryApi.ts  draftStorage.ts  invitationApi.ts  questionnaire.ts
apps/web/src/schemas/: answerPayload.ts
apps/web/src/scripts/: checkAnswerPayloadSchemas.ts  generateAnswerSchema.ts
apps/web/src/server/: server.ts
apps/web/src/styles/: app.css
apps/web/src/types/: directory.ts  invitation.ts  questionnaire.ts
data/: staffing_with_artifact_text_links.xlsx
db/migrations/: 001_initial_core_schema.sql
docs/: database.md  interview-answer-json.md  profiling-questionnaire.md  web-app-todo.md
docs/schemas/: interview-answer-payload.schema.json
scripts/: apply_migrations.py  import_staffing_xlsx.py
